--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "peerjs": "^1.4.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.10.0"
     },
     "devDependencies": {
+        "@types/node": "^18.16.1",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
         "@typescript-eslint/eslint-plugin": "^5.57.1",
